# ls_llm_text_utilities

./: README.md  classes.py  main.py  pyproject.toml
.github/workflows/: workflow.yml
